--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -2,7 +2,7 @@ body {
   color: #304852;
   padding:0em;
   margin:0em;
-  overflow:hidden;
+  overflow:auto;
 }
 
 a{
@@ -109,18 +109,6 @@ a:active {
   color: #EEEEEE;
 }
 
-.Reviews{
-  border-top: .8em solid #ff0000;
-}
-
-.ReviewText{
-  font-size: 18pt;
-}
-
-#reviewer{
-  font-size: 12pt;
-}
-
 .PokemonStats{
   padding: 0em;
   margin: 0em;
@@ -129,10 +117,7 @@ a:active {
  /* border-top: .2em solid #ff0000;*/
 }
 
-#CultureText{
-  font-size:2em;
-  color: #EEEEEE;
-}
+
 /*#F87D09*/
 
 .Portfolio{
@@ -223,4 +208,9 @@ textarea{
   background-color: white;
   border:1px solid red;
   height:2em;
+}
+
+#sprite{
+ margin-top:17%; 
+ width:12em;
 }
